--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		/>
 
 		<title>Frontend Mentor | News homepage</title>
+		<link rel="stylesheet" href="style.css" />
 
 		<!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 		<style>
@@ -26,17 +27,108 @@
 		</style>
 	</head>
 	<body>
-		Home New Popular Trending Categories The Bright Future of Web 3.0? We dive
-		into the next evolution of the web that claims to put the power of the
-		platforms back into the hands of the people. But is it really fulfilling its
-		promise? Read more New Hydrogen VS Electric Cars Will hydrogen-fueled cars
-		ever catch up to EVs? The Downsides of AI Artistry What are the possible
-		adverse effects of on-demand AI image generation? Is VC Funding Drying Up?
-		Private funding by VC firms is down 50% YOY. We take a look at what that
-		means. 01 Reviving Retro PCs What happens when old PCs are given modern
-		upgrades? 02 Top 10 Laptops of 2022 Our best picks for various needs and
-		budgets. 03 The Growth of Gaming How the pandemic has sparked fresh
-		opportunities.
+		<nav>
+			<img src="./assets/images/logo.svg" alt="Website logo" />
+			<ul class="nav">
+				<li><a href="#" class="nav__item">Home</a></li>
+				<li><a href="#" class="nav__item">New</a></li>
+				<li><a href="#" class="nav__item">Popular</a></li>
+				<li><a href="#" class="nav__item">Trending</a></li>
+				<li><a href="#" class="nav__item">Categories</a></li>
+			</ul>
+		</nav>
+
+		<main>
+			<header class="header">
+				<figure class="header__img-container">
+					<img
+						src="./assets/images/image-web-3-desktop.jpg"
+						alt="The header image"
+						class="header__img"
+					/>
+				</figure>
+				<h1 class="header__heading">The Bright Future of Web 3.0?</h1>
+				<p class="header__paragraph">
+					We dive into the next evolution of the web that claims to put the
+					power of the platforms back into the hands of the people. But is it
+					really fulfilling its promise?
+				</p>
+				<a href="#" class="header__btn">Read more</a>
+			</header>
+			<aside class="side">
+				<h2 class="side__header">New</h2>
+				<div class="side__item">
+					<h3 class="side__item-title">Hydrogen VS Electric Cars</h3>
+					<p class="side__item-content">
+						Will hydrogen-fueled cars ever catch up to EVs?
+					</p>
+				</div>
+				<div class="side__item">
+					<h3 class="side__title">The Downsides of AI Artistry</h3>
+					<p class="side__content">
+						What are the possible adverse effects of on-demand AI image
+						generation?
+					</p>
+				</div>
+				<div class="side__item">
+					<h3 class="side__title">Is VC Funding Drying Up?</h3>
+					<p class="side__content">
+						Private funding by VC firms is down 50% YOY. We take a look at what
+						that means.
+					</p>
+				</div>
+			</aside>
+			<section class="news">
+				<article class="card">
+					<figure>
+						<img
+							src="./assets/images/image-retro-pcs.jpg"
+							alt="Retro pcs"
+							class="card__img"
+						/>
+					</figure>
+					<div>
+						<h2 class="card__heading">01</h2>
+						<h3 class="card__title">Reviving Retro PCs</h3>
+						<p class="card__para">
+							What happens when old PCs are given modern upgrades?
+						</p>
+					</div>
+				</article>
+				<article class="card">
+					<figure>
+						<img
+							src="./assets/images/image-top-laptops.jpg"
+							alt="Retro pcs"
+							class="card__img"
+						/>
+					</figure>
+					<div>
+						<h2 class="card__heading">02</h2>
+						<h3 class="card__title">Top 10 Laptops of 2022</h3>
+						<p class="card__para">
+							Our best picks for various needs and budgets.
+						</p>
+					</div>
+				</article>
+				<article class="card">
+					<figure>
+						<img
+							src="./assets/images/image-gaming-growth.jpg"
+							alt="Retro pcs"
+							class="card__img"
+						/>
+					</figure>
+					<div>
+						<h2 class="card__heading">03</h2>
+						<h3 class="card__title">The Growth of Gaming</h3>
+						<p class="card__para">
+							How the pandemic has sparked fresh opportunities.
+						</p>
+					</div>
+				</article>
+			</section>
+		</main>
 
 		<div class="attribution">
 			Challenge by
