Add style changes to site

--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
 		</style>
 	</head>
 	<body>
-		<nav>
-			<img src="./assets/images/logo.svg" alt="Website logo" />
+		<nav class="navbar">
+			<figure class="logo-container">
+				<img src="./assets/images/logo.svg" alt="Website logo" class="logo" />
+			</figure>
 			<ul class="nav">
 				<li><a href="#" class="nav__item">Home</a></li>
 				<li><a href="#" class="nav__item">New</a></li>
@@ -64,15 +66,15 @@
 					</p>
 				</div>
 				<div class="side__item">
-					<h3 class="side__title">The Downsides of AI Artistry</h3>
-					<p class="side__content">
+					<h3 class="side__item-title">The Downsides of AI Artistry</h3>
+					<p class="side__item-content">
 						What are the possible adverse effects of on-demand AI image
 						generation?
 					</p>
 				</div>
 				<div class="side__item">
-					<h3 class="side__title">Is VC Funding Drying Up?</h3>
-					<p class="side__content">
+					<h3 class="side__item-title">Is VC Funding Drying Up?</h3>
+					<p class="side__item-content">
 						Private funding by VC firms is down 50% YOY. We take a look at what
 						that means.
 					</p>
