--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- @format -->
+
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -27,62 +29,95 @@
 		</style>
 	</head>
 	<body>
-		<nav class="navbar">
-			<figure class="logo-container">
-				<img src="./assets/images/logo.svg" alt="Website logo" class="logo" />
-			</figure>
-			<ul class="nav">
-				<li><a href="#" class="nav__item">Home</a></li>
-				<li><a href="#" class="nav__item">New</a></li>
-				<li><a href="#" class="nav__item">Popular</a></li>
-				<li><a href="#" class="nav__item">Trending</a></li>
-				<li><a href="#" class="nav__item">Categories</a></li>
-			</ul>
-		</nav>
-
-		<main>
-			<header class="header">
-				<figure class="header__img-container">
-					<img
-						src="./assets/images/image-web-3-desktop.jpg"
-						alt="The header image"
-						class="header__img"
-					/>
+		<main class="page">
+			<nav class="navbar">
+				<figure class="logo-container">
+					<img src="./assets/images/logo.svg" alt="Website logo" class="logo" />
 				</figure>
-				<h1 class="header__heading">The Bright Future of Web 3.0?</h1>
-				<p class="header__paragraph">
-					We dive into the next evolution of the web that claims to put the
-					power of the platforms back into the hands of the people. But is it
-					really fulfilling its promise?
-				</p>
-				<a href="#" class="header__btn">Read more</a>
-			</header>
-			<aside class="side">
-				<h2 class="side__header">New</h2>
-				<div class="side__item">
-					<h3 class="side__item-title">Hydrogen VS Electric Cars</h3>
-					<p class="side__item-content">
-						Will hydrogen-fueled cars ever catch up to EVs?
-					</p>
-				</div>
-				<div class="side__item">
-					<h3 class="side__item-title">The Downsides of AI Artistry</h3>
-					<p class="side__item-content">
-						What are the possible adverse effects of on-demand AI image
-						generation?
-					</p>
-				</div>
-				<div class="side__item">
-					<h3 class="side__item-title">Is VC Funding Drying Up?</h3>
-					<p class="side__item-content">
-						Private funding by VC firms is down 50% YOY. We take a look at what
-						that means.
-					</p>
-				</div>
-			</aside>
+				<article class="nav-container">
+					<ul class="nav">
+						<li class="menu__close">
+							<img
+								src="./assets/images/icon-menu-close.svg"
+								alt="Menu"
+								class="menu__btn"
+								id="close"
+							/>
+						</li>
+						<li><a href="#" class="nav__item">Home</a></li>
+						<li><a href="#" class="nav__item">New</a></li>
+						<li><a href="#" class="nav__item">Popular</a></li>
+						<li><a href="#" class="nav__item">Trending</a></li>
+						<li><a href="#" class="nav__item">Categories</a></li>
+					</ul>
+				</article>
+				<img
+					src="./assets/images/icon-menu.svg"
+					alt="Menu"
+					class="menu__btn"
+					id="open"
+				/>
+			</nav>
+
+			<div class="main">
+				<header class="header">
+					<picture class="header__img-container">
+						<source
+							class="header__img"
+							media="(min-width: 900px)"
+							srcset="./assets/images/image-web-3-desktop.jpg"
+						/>
+						<img
+							src="./assets/images/image-web-3-mobile.jpg"
+							alt="The header image"
+							class="header__img"
+						/>
+					</picture>
+					<h1 class="header__heading">The Bright Future of Web 3.0?</h1>
+					<div>
+						<p class="header__paragraph">
+							We dive into the next evolution of the web that claims to put the
+							power of the platforms back into the hands of the people. But is
+							it really fulfilling its promise?
+						</p>
+						<a href="#" class="header__btn">Read more</a>
+					</div>
+				</header>
+
+				<aside class="side">
+					<h2 class="side__header">New</h2>
+					<div class="side__item">
+						<a href="#"
+							><h3 class="side__item-title">Hydrogen VS Electric Cars</h3></a
+						>
+						<p class="side__item-content">
+							Will hydrogen-fueled cars ever catch up to EVs?
+						</p>
+					</div>
+					<div class="side__item">
+						<a href="#">
+							<h3 class="side__item-title">The Downsides of AI Artistry</h3>
+						</a>
+						<p class="side__item-content">
+							What are the possible adverse effects of on-demand AI image
+							generation?
+						</p>
+					</div>
+					<div class="side__item">
+						<a href="#"
+							><h3 class="side__item-title">Is VC Funding Drying Up?</h3></a
+						>
+						<p class="side__item-content">
+							Private funding by VC firms is down 50% YOY. We take a look at
+							what that means.
+						</p>
+					</div>
+				</aside>
+			</div>
+
 			<section class="news">
 				<article class="card">
-					<figure>
+					<figure class="card__img-container">
 						<img
 							src="./assets/images/image-retro-pcs.jpg"
 							alt="Retro pcs"
@@ -91,14 +126,14 @@
 					</figure>
 					<div>
 						<h2 class="card__heading">01</h2>
-						<h3 class="card__title">Reviving Retro PCs</h3>
+						<h3><a class="card__title" href="#">Reviving Retro PCs</a></h3>
 						<p class="card__para">
 							What happens when old PCs are given modern upgrades?
 						</p>
 					</div>
 				</article>
 				<article class="card">
-					<figure>
+					<figure class="card__img-container">
 						<img
 							src="./assets/images/image-top-laptops.jpg"
 							alt="Retro pcs"
@@ -107,14 +142,14 @@
 					</figure>
 					<div>
 						<h2 class="card__heading">02</h2>
-						<h3 class="card__title">Top 10 Laptops of 2022</h3>
+						<h3><a class="card__title" href="#">Top 10 Laptops of 2022</a></h3>
 						<p class="card__para">
 							Our best picks for various needs and budgets.
 						</p>
 					</div>
 				</article>
 				<article class="card">
-					<figure>
+					<figure class="card__img-container">
 						<img
 							src="./assets/images/image-gaming-growth.jpg"
 							alt="Retro pcs"
@@ -123,7 +158,7 @@
 					</figure>
 					<div>
 						<h2 class="card__heading">03</h2>
-						<h3 class="card__title">The Growth of Gaming</h3>
+						<h3><a class="card__title" href="#">The Growth of Gaming</a></h3>
 						<p class="card__para">
 							How the pandemic has sparked fresh opportunities.
 						</p>
@@ -138,5 +173,7 @@
 				>Frontend Mentor</a
 			>. Coded by <a href="#">Your Name Here</a>.
 		</div>
+
+		<script src="index.js"></script>
 	</body>
 </html>
