--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 			Challenge by
 			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
 				>Frontend Mentor</a
-			>. Coded by <a href="#">Your Name Here</a>.
+			>. Coded by <a href="https://www.humphreyyeboah.com">Humphrey Yeboah</a>.
 		</div>
 
 		<script src="index.js"></script>
